# python-playground

./: .gitignore  Makefile  numgen5.txt
ListNode/: pyproject.toml
ListNode/app/: main.py
crypto-list/: data.json  output.txt  pyproject.toml
crypto-list/app/: main.py
generate/: generate.py
jitta-random-port/: Makefile  pyproject.toml
jitta-random-port/app/: app.py  port.py
kidtungTUI/: App.py  main.py  pyproject.toml
open-cv/: Makefile  main.py  pyproject.toml
price-range/: Makefile  pyproject.toml
price-range/app/: app.py  main.py  pricerange.py
profit-calculator/: app.py  main.py  pyproject.toml
profit-calculator/app/: app.py  main.py  profit_calculator.py  table.py
profit-calculator2/profit-calculator/: pyproject.toml
profit-calculator2/profit-calculator/app/: main.py
pydantic/: Makefile  pyproject.toml
pydantic/app/: data.py  main.py  models.py
quickMath/: Makefile  QuickMath.py  main.py
quickMath/srcs/: PlayerRecord.py  PlayerScore.py  QuickMath.py  Score.py
requsets-coinmarketcap/: pyproject.toml
requsets-coinmarketcap/app/: main.py
rich/: layout.py  main.py  table.py
selenium/: main.py  pyproject.toml
selenium-coinmarketcap/: pyproject.toml
selenium-coinmarketcap/app/: main.py
selenium-settrade/: pyproject.toml
selenium-settrade/app/: main.py
tree/: emoji  main.py
