[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Mizky555 <opaltales_@windowslive.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rich = "^13.7.1"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
