[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Mizky555 <opaltales_@windowslive.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.18.1"
chromedriver = "^2.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
